--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@ layout: default
   <h4>Analyzing Contract Value</h4>
   <p>
     Here are steps of
-    <a href="/ooo/data-clean/" target="_blank"
+    <a href="{{ site.baseurl }}/ooo/data-clean/" target="_blank"
       >data collection, preparation and cleaning</a
     >
     in which I used the filter styles with groupby and pivoting of Pandas, and
     <b>the interpretation</b> I extracted from
-    <a href="/ooo/data-exploration/" target="_blank">data exploration</a>
+    <a href="{{ site.baseurl }}/ooo/data-exploration/" target="_blank">data exploration</a>
     with bar charts, heatmaps, and the range of value highlight in the table.
   </p>
-  <img src="/ooo/3.png" />
+  <img src="{{ site.baseurl }}/ooo/3.png" />
   <h4>Building Dashboard of Sales and Marketing</h4>
   <p>
     Visually tracks, analyzes
