--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ layout: default
       >in this link</a
     >.
   </p>
-  <img src="/ooo/1.png" />
+  <img src="{{ site.baseurl }}/ooo/1.png" />
 
   <h4>Building Sales Pipeline</h4>
   <p>
@@ -79,7 +79,7 @@ layout: default
       >in this link</a
     >.
   </p>
-  <img src="/ooo/2b.png" />
+  <img src="{{ site.baseurl }}/ooo/2b.png" />
 </div>
 
 <div id='zoop' class="section">
@@ -121,20 +121,20 @@ layout: default
     <b>Reminder</b> (increase show-up possibility, maximize capacity), and
     <b>Check-out</b> (manage cashflow, improve service).
   </p>
-  <img src="/zoop/2.png" />
+  <img src="{{ site.baseurl }}/zoop/2.png" />
   <h4>Creating Service Blueprint</h4>
   <p> 
    <a href="https://www.figma.com/file/HkAib1GeQ9baXAP2Nq8aeA/Service-Blueprint?node-id=1%3A13" target="_blank">
    A complex scenarios</a> generated from the Clinics' point of views that helps us understand a sample of real context (how customers involve).
    </p>
-   <img src="/zoop/1.png" />
+   <img src="{{ site.baseurl }}/zoop/1.png" />
    <h4>Building sample analytics dashboard for clinic</h4>
    <p>I designed this view and worked with my analyst team to run expriements with clinics. Due to using MVP (as a quick experiement), 
    so I created it in <a href="https://plotly.com/dash/" target="_blank">Dash Plotly</a> that loaded data from CSV booking files provided by clinics.
    The key dashboard context here based on the purpose of every clinic owner: to see timely booking and revenue in a time range.
     </p><p>View this live version <a href="" target="_blank">in this link</a>
    </p>
-   <img src="/zoop/3.png" />
+   <img src="{{ site.baseurl }}/zoop/3.png" />
 </div>
 
 <div id='hiip' class="section">
@@ -147,14 +147,14 @@ layout: default
   <p>
     Hiip is a social media marketing platform which aims to connect brands and influencers, help them work together through social campaigns. We call it Influencer Marketing. Apart from Vietnam, we also served 2 other markets, Thailand and Indonesia at the same time.
   </p>
-  <img src="/hiip/2.png" />
+  <img src="{{ site.baseurl }}/hiip/2.png" />
   
   <h4>Creating centralized Logging System to track user's behaviors</h4>
   <p>
     When I was carrying out some research into the user insight of real concern on campaigns, I found that both Brands and Influencers cared about the campaign, but Brands knew precisely their requirement, whereas Influencers hadn’t any idea at all. That means there were many conflicts between sharing information and working on content in every campaigns.</p>
   <p>
   Therefore, we should track the routes from creating to reporting campaign to know which essential aspects influence user’s decisions. Then I, with the dev team, define all metrics (both user and business) to track user activities via actions and save params into the database. </p>
-  <img src="/hiip/1.png" />
+  <img src="{{ site.baseurl }}/hiip/1.png" />
   <h4>Building Influencer List Filter</h4>
   <p> Brand users want to seek the best information or compare between service of influencers. 
   They want to revamp the influencer profile, which is supposed to be incomprehensible, and can’t solve for any purposes of users.</p>
@@ -168,23 +168,23 @@ layout: default
       target="_blank"
       >in this link</a
     > and the design <a
-      href="/hiip/influencer-list/"
+      href="{{ site.baseurl }}/hiip/influencer-list/"
       target="_blank"
       >at here</a>.
       <br>
-      <img src="/hiip/3.png" />
+      <img src="{{ site.baseurl }}/hiip/3.png" />
     </p>
     <br>
 
    <h4>Building Influencer Profile Dashboard</h4>
    <p>Here is a sample detail profile of influencers. View other views
     <a
-      href="/hiip/influencer-profile/"
+      href="{{ site.baseurl }}/hiip/influencer-profile/"
       target="_blank"
       >in this link</a
     > 
     <br>
-      <img src="/hiip/inf2a.png" />
+      <img src="{{ site.baseurl }}/hiip/inf2a.png" />
     </p>
 
 
@@ -202,7 +202,7 @@ layout: default
     These passes can only be used and applied as event tickets, cards, coupons and membership cards via a mobile device 
     to make payment or scan information.
   </p>
-  <img src="/mmp/6.png" />
+  <img src="{{ site.baseurl }}/mmp/6.png" />
   
   <h4>Mapping Experience Flow</h4>
   <p>
@@ -211,15 +211,15 @@ layout: default
   <p>
   Then we propose the TSE for Audi client. The case manager can create cases (delivered via Apple passes), manage cases, search, or receive notifications). The driver can view the time and information of the car repair service provider, seed feedback of quality of Audi call center service.
   </p>
-  <img src="/mmp/3.png" />
+  <img src="{{ site.baseurl }}/mmp/3.png" />
   <h4>Monitoring Customer Statisfaction</h4>
     <p>I with my team conducted interviews with customer on feature usage two times per month.</p>
-   <img src="/mmp/7.png" />
-   <img src="/mmp/2.png" />
+   <img src="{{ site.baseurl }}/mmp/7.png" />
+   <img src="{{ site.baseurl }}/mmp/2.png" />
    <h4>Building Dashboard Analytics for Customers</h4>
    <p>Here are the design that helps our customers keep track of their performance.</p>
-    <img src="/mmp/10.png" />
+    <img src="{{ site.baseurl }}/mmp/10.png" />
    <p>A wireframe of comparision</p>
-    <img src="/mmp/9.png" />
+    <img src="{{ site.baseurl }}/mmp/9.png" />
 </div>
 
