--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@ layout: default
   <h4>Analyzing Contract Value</h4>
   <p>
     Here are steps of
-    <a href="{{ site.baseurl }}/ooo/data-clean/" target="_blank"
+    <a href="{{ site.baseurl }}/ooo/data-clean" target="_blank"
       >data collection, preparation and cleaning</a
     >
     in which I used the filter styles with groupby and pivoting of Pandas, and
     <b>the interpretation</b> I extracted from
-    <a href="{{ site.baseurl }}/ooo/data-exploration/" target="_blank">data exploration</a>
+    <a href="{{ site.baseurl }}/ooo/data-exploration" target="_blank">data exploration</a>
     with bar charts, heatmaps, and the range of value highlight in the table.
   </p>
   <img src="{{ site.baseurl }}/ooo/3.png" />
@@ -168,7 +168,7 @@ layout: default
       target="_blank"
       >in this link</a
     > and the design <a
-      href="{{ site.baseurl }}/hiip/influencer-list/"
+      href="{{ site.baseurl }}/hiip/influencer-list"
       target="_blank"
       >at here</a>.
       <br>
@@ -179,7 +179,7 @@ layout: default
    <h4>Building Influencer Profile Dashboard</h4>
    <p>Here is a sample detail profile of influencers. View other views
     <a
-      href="{{ site.baseurl }}/hiip/influencer-profile/"
+      href="{{ site.baseurl }}/hiip/influencer-profile"
       target="_blank"
       >in this link</a
     > 
