--- a/ooo/data-clean.html
+++ b/ooo/data-clean.html
@@ -13151,7 +13151,7 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="1.-Data-Collection">1. Data Collection<a class="anchor-link" href="#1.-Data-Collection">&#182;</a></h3><p>All contract-related data is extracted from database. I joined value from necessary tables and exported to one CSV file.
-<img src="../1a.png" alt="title"></p>
+<img src="1a.png" alt="title"></p>
 
 </div>
 </div>
@@ -13245,7 +13245,7 @@ div#notebook {
 <li>Seller information</li>
 <li>Contract information</li>
 </ol>
-<h4 id="Entities-in-dataset-(levels)">Entities in dataset (levels)<a class="anchor-link" href="#Entities-in-dataset-(levels)">&#182;</a></h4><p><img src="../2.png" alt="title"></p>
+<h4 id="Entities-in-dataset-(levels)">Entities in dataset (levels)<a class="anchor-link" href="#Entities-in-dataset-(levels)">&#182;</a></h4><p><img src="2.png" alt="title"></p>
 
 </div>
 </div>
