--- a/hiip/influencer-list.html
+++ b/hiip/influencer-list.html
@@ -3,17 +3,17 @@ layout: default
 ---
 <h2>Influencer List Filter Wireframe</h2>
 <p>Home</p>
-<p><img src="/hiip/filter-1.png" /></p>
+<p><img src="filter-1.png" /></p>
 <br>
 <p>Show filter box</p>
-<p><img src="/hiip/filter-2.png" /></p>
+<p><img src="filter-2.png" /></p>
 <br>
 <p>
   Add more filter
 </p>
-<p><img src="/hiip/filter-3.png" /></p>
+<p><img src="filter-3.png" /></p>
 <br>
 <p>
   Select option
 </p>
-<p><img src="/hiip/filter-4.png" /></p>
+<p><img src="filter-4.png" /></p>
