--- a/hiip/influencer-profile.html
+++ b/hiip/influencer-profile.html
@@ -3,17 +3,17 @@ layout: default
 ---
 <h2>Influencer Profile Designs</h2>
 <p>Engagement</p>
-<p><img src="/hiip/inf2a.png" /></p>
+<p><img src="inf2a.png" /></p>
 <br>
 <p>Peformance</p>
-<p><img src="/hiip/inf2b.png" /></p>
+<p><img src="inf2b.png" /></p>
 <br>
 <p>
   Fan Demographics
 </p>
-<p><img src="/hiip/inf2c.png" /></p>
+<p><img src="inf2c.png" /></p>
 <br>
 <p>
   Cost
 </p>
-<p><img src="/hiip/inf2d.png" /></p>
+<p><img src="inf2d.png" /></p>
